@@ -1,5 +1,7 @@
 package com.neuronrobotics.bowlerstudio.threed;
 
+import java.lang.reflect.Field;
+import java.lang.reflect.Method;
 import java.util.ArrayList;
 
 import com.neuronrobotics.bowlerstudio.BowlerStudio;
@@ -7,6 +9,8 @@ import com.neuronrobotics.bowlerstudio.physics.TransformFactory;
 import com.neuronrobotics.sdk.addons.kinematics.math.RotationNR;
 import com.neuronrobotics.sdk.addons.kinematics.math.TransformNR;
 
+import Jama.Matrix;
+import javafx.animation.AnimationTimer;
 import javafx.scene.Group;
 import javafx.scene.PerspectiveCamera;
 import javafx.scene.transform.Affine;
@@ -14,9 +18,6 @@ import javafx.scene.transform.Affine;
 public class VirtualCameraMobileBase {
 	public static final TransformNR CameraGlobalOffset = new TransformNR(0, 0, 0, new RotationNR(180, 0, 0));
 	private TransformNR myGlobal = new TransformNR();
-	// double azOffset = 0;
-	// double elOffset = 0;
-	// double tlOffset = 0;
 	private static final int DEFAULT_ZOOM_DEPTH = -1500;
 	private PerspectiveCamera camera;
 	private Group hand;
@@ -37,12 +38,52 @@ public class VirtualCameraMobileBase {
 	private String name;
 	private double zoomScale = 1;
 
+	// ---------------------------------------------------------------
+	// Orthographic state
+	// ---------------------------------------------------------------
+	public enum ProjectionMode {
+		PERSPECTIVE, ORTHOGRAPHIC
+	}
+
+	private ProjectionMode projectionMode = ProjectionMode.PERSPECTIVE;
+
+	private double savedFov = 45.0;
+	private double savedNearClip = 0.1;
+	private double savedFarClip = 60000.0;
+
+	/** World units from viewport centre to top edge — controls ortho zoom. */
+	private double orthoScale = 750.0;
+
+	/** Keep current so the matrix is correct after a resize. */
+	private double viewportWidth = 800.0;
+	private double viewportHeight = 600.0;
+
+	// Reflection targets — resolved once on first ortho activation
+	private Object ngCamera = null;
+	private Object projMatrix = null; // NGCamera.projViewTx (GeneralTransform3D)
+	private Field matField = null; // GeneralTransform3D.mat (double[])
+	private boolean reflectionReady = false;
+
+	/**
+	 * Post-pulse listener — fires AFTER JavaFX syncs the scene graph to Prism but
+	 * BEFORE the frame is rendered. This wins the race against JavaFX's own matrix
+	 * recomputation and eliminates the flicker.
+	 *
+	 * Requires: --add-exports javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
+	 * --add-opens javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
+	 */
+	private final com.sun.javafx.tk.TKPulseListener postPulseListener = this::injectOrthoMatrix;
+
+	private boolean pulseListenerRegistered = false;
+
+	// ---------------------------------------------------------------
+	// Constructor — unchanged
+	// ---------------------------------------------------------------
 	public VirtualCameraMobileBase(PerspectiveCamera camera, Group hand, ICameraChangeListener lis, String name) {
 		this.hand = hand;
 		this.name = name;
 		this.setCamera(camera);
 		addListener(lis);
-		// com.neuronrobotics.sdk.common.Log.error("Setting camera frame transform");
 
 		manipulationFrame = new Group();
 		camera.getTransforms().add(zoomAffine);
@@ -53,6 +94,465 @@ public class VirtualCameraMobileBase {
 		cameraFrame.getChildren().add(manipulationFrame);
 		setZoomDepth(DEFAULT_ZOOM_DEPTH);
 	}
+
+	// ---------------------------------------------------------------
+	// Public projection API
+	// ---------------------------------------------------------------
+
+	/** Toggle between PERSPECTIVE and ORTHOGRAPHIC. */
+	public void toggleProjectionMode() {
+		setProjectionMode(projectionMode == ProjectionMode.PERSPECTIVE
+				? ProjectionMode.ORTHOGRAPHIC
+				: ProjectionMode.PERSPECTIVE);
+	}
+
+	/**
+	 * Explicitly set the projection mode. Thread-safe — dispatches to FX thread.
+	 */
+	public void setProjectionMode(ProjectionMode mode) {
+		this.projectionMode = mode;
+		BowlerStudio.runLater(() -> {
+			if (mode == ProjectionMode.ORTHOGRAPHIC)
+				activateOrtho();
+			else
+				activatePerspective();
+		});
+	}
+
+	public ProjectionMode getProjectionMode() {
+		return projectionMode;
+	}
+
+	public boolean isOrthographic() {
+		return projectionMode == ProjectionMode.ORTHOGRAPHIC;
+	}
+
+	/**
+	 * Call from your SubScene width/height listeners so the ortho matrix stays
+	 * correct after a resize.
+	 */
+	public void setViewportSize(double width, double height) {
+		this.viewportWidth = width;
+		this.viewportHeight = height;
+		if (projectionMode == ProjectionMode.ORTHOGRAPHIC)
+			injectOrthoMatrix();
+	}
+
+	/**
+	 * Ortho zoom — call from scroll-wheel handler instead of setZoomDepth() when in
+	 * ortho mode. factor < 1 zooms in, factor > 1 zooms out.
+	 */
+	public void orthoZoom(double factor) {
+		orthoScale = Math.max(1.0, orthoScale * factor);
+		if (projectionMode == ProjectionMode.ORTHOGRAPHIC)
+			injectOrthoMatrix();
+	}
+
+	public double getOrthoScale() {
+		return orthoScale;
+	}
+
+	public void setOrthoScale(double s) {
+		orthoScale = s;
+	}
+
+	// ---------------------------------------------------------------
+	// Internal: activate / deactivate
+	// ---------------------------------------------------------------
+
+	private void activateOrtho() {
+		// Seed orthoScale from perspective state so the view doesn't jump
+		double distance = -zoomDepth;
+		double fovRad = Math.toRadians(camera.getFieldOfView());
+		orthoScale = Math.tan(fovRad / 2.0) * distance;
+
+		savedFov = camera.getFieldOfView();
+		savedNearClip = camera.getNearClip();
+		savedFarClip = camera.getFarClip();
+
+		camera.setNearClip(0.1);
+		camera.setFarClip(savedFarClip);
+
+		if (!reflectionReady)
+			reflectionReady = resolveReflection();
+
+		if (reflectionReady) {
+			startPostPulseListener();
+		} else {
+			com.neuronrobotics.sdk.common.Log.error("OrthoCamera: reflection failed — check --add-opens JVM flags.");
+		}
+	}
+
+	private void activatePerspective() {
+		stopPostPulseListener();
+		camera.setFieldOfView(savedFov);
+		camera.setNearClip(savedNearClip);
+		camera.setFarClip(savedFarClip);
+		// Nudge FOV so JavaFX recomputes and overwrites our injected matrix
+		camera.setFieldOfView(savedFov + 0.00001);
+		camera.setFieldOfView(savedFov);
+	}
+
+	// ---------------------------------------------------------------
+	// Internal: post-pulse listener (replaces AnimationTimer)
+	// Fires AFTER scene graph sync, BEFORE render — no flicker.
+	// ---------------------------------------------------------------
+
+	private void startPostPulseListener() {
+		if (pulseListenerRegistered)
+			return;
+		try {
+			com.sun.javafx.tk.Toolkit.getToolkit().addSceneTkPulseListener(postPulseListener);
+			pulseListenerRegistered = true;
+			log("post-pulse listener registered");
+		} catch (Exception e) {
+			log("could not register pulse listener: " + e.getMessage() + " — falling back to AnimationTimer");
+			startFallbackTimer();
+		}
+	}
+
+	private void stopPostPulseListener() {
+		if (pulseListenerRegistered) {
+			try {
+				com.sun.javafx.tk.Toolkit.getToolkit().removeSceneTkPulseListener(postPulseListener);
+			} catch (Exception ignored) {
+			}
+			pulseListenerRegistered = false;
+		}
+		stopFallbackTimer();
+	}
+
+	// Fallback in case Toolkit pulse API is unavailable
+	private AnimationTimer fallbackTimer = null;
+
+	private void startFallbackTimer() {
+		stopFallbackTimer();
+		fallbackTimer = new AnimationTimer() {
+			@Override
+			public void handle(long now) {
+				injectOrthoMatrix();
+			}
+		};
+		fallbackTimer.start();
+	}
+
+	private void stopFallbackTimer() {
+		if (fallbackTimer != null) {
+			fallbackTimer.stop();
+			fallbackTimer = null;
+		}
+	}
+
+	// ---------------------------------------------------------------
+	// Internal: matrix injection
+	// ---------------------------------------------------------------
+	private void injectOrthoMatrix() {
+		if (!reflectionReady || projMatrix == null || matField == null)
+			return;
+
+		// --- 1. Build ortho projection as Jama.Matrix ---
+		double aspect = viewportWidth / viewportHeight;
+		double hw = orthoScale * aspect;
+		double hh = orthoScale;
+		double near = camera.getNearClip();
+		double far = camera.getFarClip();
+		double fn = far - near;
+
+		Matrix P = new Matrix(new double[][]{{1.0 / hw, 0, 0, 0}, {0, 1.0 / hh, 0, 0},
+				{0, 0, -2.0 / fn, -(far + near) / fn}, {0, 0, 0, 1.0}});
+
+		// --- 2. Get view matrix via TransformNR (rigid transform — safe) ---
+		javafx.scene.transform.Transform w2c = camera.getLocalToSceneTransform();
+		TransformNR vnr = TransformFactory.affineToNr(w2c).inverse();
+		Matrix V = vnr.getMatrixTransform();
+
+		// --- 3. Combine: M = P × V ---
+		Matrix M = P.times(V);
+
+		// --- 4. Flatten row-major and inject into Prism's GeneralTransform3D.mat[] ---
+		double[][] Mdata = M.getArray();
+		double[] flat = new double[16];
+		for (int row = 0; row < 4; row++)
+			for (int col = 0; col < 4; col++)
+				flat[row * 4 + col] = Mdata[row][col];
+
+		try {
+			Object arr = matField.get(projMatrix);
+			if (arr instanceof double[]) {
+				System.arraycopy(flat, 0, (double[]) arr, 0, 16);
+			} else if (arr instanceof float[]) {
+				float[] f = (float[]) arr;
+				for (int i = 0; i < 16; i++)
+					f[i] = (float) flat[i];
+			}
+			forcePrismDirty();
+		} catch (Exception e) {
+			com.neuronrobotics.sdk.common.Log.error("OrthoCamera inject: " + e.getMessage());
+		}
+	}
+
+	// ---------------------------------------------------------------------------
+
+	// ---------------------------------------------------------------
+	// Internal: reflection — resilient peer resolution
+	// ---------------------------------------------------------------
+
+	/**
+	 * Required JVM flags: --add-opens
+	 * javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED --add-opens
+	 * javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED --add-opens
+	 * javafx.graphics/com.sun.javafx.geom.transform=ALL-UNNAMED --add-opens
+	 * javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED --add-opens
+	 * javafx.graphics/com.sun.javafx.camera=ALL-UNNAMED --add-opens
+	 * javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED --add-exports
+	 * javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED --add-exports
+	 * javafx.graphics/com.sun.javafx.geom.transform=ALL-UNNAMED --add-exports
+	 * javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED --add-exports
+	 * javafx.graphics/com.sun.javafx.camera=ALL-UNNAMED --add-exports
+	 * javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
+	 */
+	private boolean resolveReflection() {
+		try {
+			ngCamera = resolvePeer();
+			if (ngCamera == null) {
+				log("Could not resolve NGCamera peer — see diagnostic output above");
+				return false;
+			}
+
+			log("NGCamera type: " + ngCamera.getClass().getName());
+
+			// JavaFX 25: projection matrix is NGCamera.projViewTx (GeneralTransform3D)
+			Field projField = findField(ngCamera.getClass(), "projViewTx");
+			if (projField == null) {
+				log("projViewTx field not found in " + ngCamera.getClass().getName());
+				dumpFieldNames(ngCamera.getClass(), "NGPerspectiveCamera full field hierarchy");
+				return false;
+			}
+			projField.setAccessible(true);
+			projMatrix = projField.get(ngCamera);
+			if (projMatrix == null) {
+				log("projViewTx value is null");
+				return false;
+			}
+
+			log("projViewTx type: " + projMatrix.getClass().getName());
+
+			matField = findField(projMatrix.getClass(), "mat");
+			if (matField == null) {
+				log("mat[] field not found in " + projMatrix.getClass().getName());
+				dumpFieldNames(projMatrix.getClass(), "GeneralTransform3D fields");
+				return false;
+			}
+			matField.setAccessible(true);
+
+			log("reflection resolved OK — mat[] type: " + matField.get(projMatrix).getClass().getSimpleName());
+			return true;
+		} catch (Exception e) {
+			log("reflection setup exception: " + e.getMessage());
+			e.printStackTrace();
+			return false;
+		}
+	}
+
+	/**
+	 * Tries every known way to get the NGCamera peer across JavaFX versions.
+	 */
+	private Object resolvePeer() {
+		Object peer;
+
+		// Strategy 1 — CameraHelper.getPeer(Camera) [FX 17-21]
+		peer = tryHelperGetPeer("com.sun.javafx.scene.CameraHelper", camera);
+		if (peer != null) {
+			log("peer via CameraHelper.getPeer()");
+			return peer;
+		}
+
+		// Strategy 2 — NodeHelper.getPeer(Node) [FX 22+]
+		peer = tryHelperGetPeer("com.sun.javafx.scene.NodeHelper", camera);
+		if (peer != null) {
+			log("peer via NodeHelper.getPeer()");
+			return peer;
+		}
+
+		// Strategy 3 — camera.impl_getPeer() [FX 11-16]
+		peer = tryInstanceMethod(camera, "impl_getPeer");
+		if (peer != null) {
+			log("peer via impl_getPeer()");
+			return peer;
+		}
+
+		// Strategy 4 — wildcard scan of CameraHelper / NodeHelper for any method
+		// that accepts a Camera and returns an NG* type
+		peer = tryAnyPeerMethod("com.sun.javafx.scene.CameraHelper", camera);
+		if (peer != null) {
+			log("peer via CameraHelper wildcard method");
+			return peer;
+		}
+
+		peer = tryAnyPeerMethod("com.sun.javafx.scene.NodeHelper", camera);
+		if (peer != null) {
+			log("peer via NodeHelper wildcard method");
+			return peer;
+		}
+
+		// Strategy 5 — direct field on Camera
+		peer = tryFieldOnObject(camera, "peer");
+		if (peer != null) {
+			log("peer via 'peer' field on Camera");
+			return peer;
+		}
+
+		peer = tryFieldOnObject(camera, "nativePeer");
+		if (peer != null) {
+			log("peer via 'nativePeer' field on Camera");
+			return peer;
+		}
+
+		// Nothing worked — dump diagnostics
+		dumpClassInfo("com.sun.javafx.scene.CameraHelper");
+		dumpClassInfo("com.sun.javafx.scene.NodeHelper");
+		dumpFieldNames(camera.getClass(), "Camera fields");
+		return null;
+	}
+
+	private static Object tryHelperGetPeer(String helperClassName, javafx.scene.Camera cam) {
+		try {
+			Class<?> helper = Class.forName(helperClassName);
+			Method m = helper.getDeclaredMethod("getPeer", javafx.scene.Camera.class);
+			m.setAccessible(true);
+			return m.invoke(null, cam);
+		} catch (Exception ignored) {
+			return null;
+		}
+	}
+
+	private static Object tryInstanceMethod(Object target, String methodName) {
+		Class<?> c = target.getClass();
+		while (c != null) {
+			try {
+				Method m = c.getDeclaredMethod(methodName);
+				m.setAccessible(true);
+				return m.invoke(target);
+			} catch (Exception ignored) {
+			}
+			c = c.getSuperclass();
+		}
+		return null;
+	}
+
+	private static Object tryAnyPeerMethod(String helperClassName, javafx.scene.Camera cam) {
+		try {
+			Class<?> helper = Class.forName(helperClassName);
+			for (Method m : helper.getDeclaredMethods()) {
+				Class<?>[] params = m.getParameterTypes();
+				if (params.length != 1)
+					continue;
+				if (!params[0].isAssignableFrom(cam.getClass()))
+					continue;
+				if (m.getReturnType().isPrimitive() || m.getReturnType() == void.class)
+					continue;
+				String mn = m.getName().toLowerCase();
+				if (mn.contains("listener") || mn.contains("scene") || mn.contains("parent"))
+					continue;
+				try {
+					m.setAccessible(true);
+					Object result = m.invoke(null, cam);
+					if (result != null && result.getClass().getName().contains("NG"))
+						return result;
+				} catch (Exception ignored) {
+				}
+			}
+		} catch (Exception ignored) {
+		}
+		return null;
+	}
+
+	private static Object tryFieldOnObject(Object target, String fieldName) {
+		Field f = findField(target.getClass(), fieldName);
+		if (f == null)
+			return null;
+		try {
+			f.setAccessible(true);
+			return f.get(target);
+		} catch (Exception ignored) {
+			return null;
+		}
+	}
+
+	// ---------------------------------------------------------------
+	// Diagnostics
+	// ---------------------------------------------------------------
+
+	private static void dumpClassInfo(String className) {
+		try {
+			Class<?> c = Class.forName(className);
+			StringBuilder sb = new StringBuilder("OrthoCamera DIAGNOSTIC — methods on " + className + ":\n");
+			for (Method m : c.getDeclaredMethods()) {
+				sb.append("  ").append(m.getName()).append("(");
+				Class<?>[] p = m.getParameterTypes();
+				for (int i = 0; i < p.length; i++) {
+					sb.append(p[i].getSimpleName());
+					if (i < p.length - 1)
+						sb.append(", ");
+				}
+				sb.append(") -> ").append(m.getReturnType().getSimpleName()).append("\n");
+			}
+			com.neuronrobotics.sdk.common.Log.warning(sb.toString());
+		} catch (Exception e) {
+			com.neuronrobotics.sdk.common.Log
+					.error("OrthoCamera: could not inspect " + className + ": " + e.getMessage());
+		}
+	}
+
+	private static void dumpFieldNames(Class<?> clazz, String label) {
+		StringBuilder sb = new StringBuilder("OrthoCamera DIAGNOSTIC — " + label + ":\n");
+		Class<?> c = clazz;
+		while (c != null) {
+			for (Field f : c.getDeclaredFields()) {
+				sb.append("  ").append(c.getSimpleName()).append(".").append(f.getName()).append(" : ")
+						.append(f.getType().getSimpleName()).append("\n");
+			}
+			c = c.getSuperclass();
+		}
+		com.neuronrobotics.sdk.common.Log.warning(sb.toString());
+	}
+
+	// ---------------------------------------------------------------
+	// Shared helpers
+	// ---------------------------------------------------------------
+
+	private void forcePrismDirty() {
+		try {
+			Class<?> ngNodeClass = Class.forName("com.sun.javafx.sg.prism.NGNode");
+			for (Method m : ngNodeClass.getDeclaredMethods()) {
+				if (m.getName().contains("markDirty") || m.getName().equals("visualsChanged")) {
+					m.setAccessible(true);
+					m.invoke(ngCamera);
+					return;
+				}
+			}
+		} catch (Exception ignored) {
+		}
+	}
+
+	private static Field findField(Class<?> c, String name) {
+		while (c != null) {
+			try {
+				return c.getDeclaredField(name);
+			} catch (NoSuchFieldException e) {
+				c = c.getSuperclass();
+			}
+		}
+		return null;
+	}
+
+	private static void log(String msg) {
+		com.neuronrobotics.sdk.common.Log.warning("OrthoCamera: " + msg);
+	}
+
+	// ---------------------------------------------------------------
+	// Everything below is UNCHANGED from original
+	// ---------------------------------------------------------------
 
 	public VirtualCameraMobileBase addListener(ICameraChangeListener l) {
 		if (!listeners.contains(l))
@@ -84,13 +584,11 @@ public class VirtualCameraMobileBase {
 	}
 
 	public void updatePositions() {
-
 		if (System.currentTimeMillis() - timeSinceLastUpdate > 16) {
 			timeSinceLastUpdate = System.currentTimeMillis();
 			error = false;
 			TransformFactory.nrToAffine(myGlobal, camerUserPerspective);
 		} else {
-			// too soon
 			error = true;
 		}
 	}
@@ -111,20 +609,14 @@ public class VirtualCameraMobileBase {
 			pureTrans.setY(newPose.getY());
 			pureTrans.setZ(newPose.getZ());
 		}
-
 		TransformNR global = getFiducialToGlobalTransform().times(pureTrans);
 		double rotationTiltRadians = newPose.getRotation().getRotationTiltRadians();
 		double rotationAzimuthRadians = newPose.getRotation().getRotationAzimuthRadians();
 		double rotationElevationRadians = newPose.getRotation().getRotationElevationRadians();
-
 		global.setRotation(new RotationNR(
 				(Math.toDegrees(rotationTiltRadians + global.getRotation().getRotationTiltRadians()) % 360),
 				(Math.toDegrees(rotationAzimuthRadians + global.getRotation().getRotationAzimuthRadians()) % 360),
 				Math.toDegrees(rotationElevationRadians + global.getRotation().getRotationElevationRadians())));
-
-		// global.getRotation().setStorage(nr);
-		// com.neuronrobotics.sdk.common.Log.error("Camera tilt="+global);
-		// New target calculated appliaed to global offset
 		setGlobalToFiducialTransform(global);
 	}
 
@@ -137,21 +629,10 @@ public class VirtualCameraMobileBase {
 	public void SetOrientation(TransformNR newPose) {
 		if (newPose == null)
 			return;
-		// newPose = CameraGlobalOffset.times(newPose);
-		// TransformNR pureTrans = new TransformNR();
-		//
-		// // Auto-generated method stub
-		// pureTrans.setX(newPose.getX());
-		// pureTrans.setY(newPose.getY());
-		// pureTrans.setZ(newPose.getZ());
-
 		TransformNR global = getFiducialToGlobalTransform().copy();
-		// use the camera global fraame elevation
 		double rotationElevationDegrees = -newPose.getRotation().getRotationElevationDegrees() - 90;
 		double azimuthDegrees = 90 - newPose.getRotation().getRotationAzimuthDegrees();
 		double globalElevationDegrees = global.getRotation().getRotationElevationDegrees();
-
-		// Apply globals to the internal camer frame
 		global.setRotation(new RotationNR(rotationElevationDegrees, azimuthDegrees, globalElevationDegrees));
 		setGlobalToFiducialTransform(global);
 	}
@@ -177,9 +658,9 @@ public class VirtualCameraMobileBase {
 	}
 
 	public TransformNR getCamerFrame() {
-		TransformNR offset = TransformFactory.affineToNr(getOffset());
+		TransformNR off = TransformFactory.affineToNr(getOffset());
 		TransformNR fiducialToGlobalTransform = getFiducialToGlobalTransform();
-		return offset.times(fiducialToGlobalTransform);
+		return off.times(fiducialToGlobalTransform);
 	}
 
 	public PerspectiveCamera getCamera() {
@@ -205,17 +686,10 @@ public class VirtualCameraMobileBase {
 	public void setZoomDepth(double zoomDepth) {
 		if (zoomlock)
 			throw new RuntimeException("Zoom can not be set when locked");
-
-		// Clamp zoomDepth between -9000 and -2
 		zoomDepth = Math.max(-9000 * getZoomScale(), Math.min(-2, zoomDepth));
-
 		this.zoomDepth = zoomDepth;
-
-		// Dynamically adjust setFarClip to reduce Z-fighting
 		camera.setFarClip(Math.max(6000 * getZoomScale(), -zoomDepth * 2));
-
 		zoomAffine.setTz(zoomDepth);
-
 		fireUpdate();
 	}
 
@@ -230,29 +704,23 @@ public class VirtualCameraMobileBase {
 	public void bind(VirtualCameraMobileBase f) {
 		if (flyingCamera.contains(f))
 			return;
-
 		this.flyingCamera.add(f);
 	}
 
 	private void synchronizePositionWithOtherFlyingCamera(TransformNR n) {
-
 		for (VirtualCameraMobileBase cam : flyingCamera) {
 			RotationNR rotation = getFiducialToGlobalTransform().getRotation();
 			if (!zoomlock && !cam.zoomlock && ((int) cam.getZoomDepth()) != ((int) getZoomDepth())) {
-				// com.neuronrobotics.sdk.common.Log.error(name+" Sync zoom to "+cam.name);
 				cam.setZoomDepth(zoomDepth);
 			}
-
 			if (rotation == cam.myGlobal.getRotation())
 				continue;
-
-			// com.neuronrobotics.sdk.common.Log.error(name+" pusing update to "+cam.name);
 			if (!cam.move || !move) {
 				TransformNR newGlob = cam.getFiducialToGlobalTransform().copy().setRotation(rotation);
 				cam.setGlobalToFiducialTransform(newGlob);
-			} else
+			} else {
 				cam.setGlobalToFiducialTransform(n.copy().setRotation(rotation));
-
+			}
 		}
 	}
 
@@ -275,5 +743,4 @@ public class VirtualCameraMobileBase {
 	public void setZoomScale(double zoomScale) {
 		this.zoomScale = zoomScale;
 	}
-
 }
